# AutoPLC

./: .env.example  .gitignore  AGENTS.md  PLCLogicGen开发计划.md  PRD-ai-chat-and-copy.md  docker-compose.yml  mcp_config.json
.playwright-mcp/: page-2026-06-14T09-20-56-528Z.yml
.scratch/plc-logic-gen/: PRD.md
.scratch/plc-logic-gen/issues/: 01-ld-data-model.md  02-ld-validator.md  03-llm-generator-basic.md  04-svg-renderer-phase1.md  05-fastapi-backend-basic.md  06-react-frontend-basic.md  07-exporters-st-scl.md  08-exporter-l5x.md  09-export-endpoint-ui.md  10-openplc-simulator.md  11-frontend-simulation-panel.md  12-svg-renderer-phase2.md  13-llm-generator-upgrade.md  14-demo-scenes.md  15-mcp-server.md  16-docker-compose.md
backend/: Dockerfile  main.py  pyproject.toml
backend/plc_logic_gen/: api.py  exporter_excel.py  exporter_l5x.py  exporters.py  generator.py  io_extractor.py  openplc_client.py  renderer.py  validator.py
backend/plc_logic_gen/models/: __init__.py  ld.py
backend/tests/: test_api.py  test_demo_scenes.py  test_exporter_excel.py  test_exporter_l5x.py  test_exporters.py  test_generator.py  test_io_extractor.py  test_ld_model.py  test_ld_validator.py  test_naming_convention.py  test_openplc_client.py  test_renderer.py  test_simulate_endpoint.py
docs/agents/: domain.md
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json
frontend/src/: App.css  App.tsx  api.ts  demos.ts  index.css
frontend/src/components/: ChatTab.tsx  GenerateTab.tsx  IOTableTab.tsx  (+4 more)
mcp_server/: server.py
mcp_server/tests/: test_mcp_tools.py
